Bug 933351 - IDBRequest should not write warning messages about callee when created by IPC IDB, r=janv, f=bholley